General Improvements. Level support. Splash Screen.

--- a/game.html
+++ b/game.html
@@ -32,6 +32,7 @@
 	<script src="js/paddle.js"></script>
 	<script src="js/ball.js"></script>
 	<script src="js/game_scenes.js"></script>
+	<script type="text/javascript"> drawSplashScreen(); </script> 
 	<script src="js/collision.js"></script>
     <script src="js/main.js"></script>
   </body>
