Major Changes 1. Design Overhaul 2. Better and Extensible Event Management System 3. Replaced setTimeout with setInterval
Problems :
1. Game ends permanently ! Needs fix ASAP !

--- a/game.html
+++ b/game.html
@@ -27,15 +27,20 @@
 	</center>
 	<script src="js/default.js"></script>
 	<script src="js/draw.js"></script>
-	<script src="js/game_scenes.js"></script>
-	<script type="text/javascript"> drawSplashScreen(); </script> 
-	<script src="js/levels.js"></script>
 	<script src="js/events.js"></script>
+	<script src="js/game_scenes.js"></script>
+	<script type="text/javascript"> 
+		//drawSplashScreen(); 
+		//canvas.addEventListener('click', splashScreenHandler, false); 
+		//canvas.addEventListener('mousemove', splashScreenHandler, false); 
+	</script> 
+	<script src="js/levels.js"></script>
 	<script src="js/bricks.js"></script>
 	<script src="js/paddle.js"></script>
 	<script src="js/ball.js"></script>
 	<script src="js/collision.js"></script>
     <script src="js/main.js"></script>
+	<script type="text/javascript"> GameLoop(); </script> 
   </body>
   
 </html>
