--- a/test/game.html
+++ b/test/game.html
@@ -26,7 +26,7 @@
 		<button id='pause'>Pause</button> 
 	</center>
 	<script src="dxball.js"></script>
-	<script type="text/javascript"> GameLoop(); </script> 
+	<script type="text/javascript"> startGame(); </script> 
   </body>
   
 </html>
