--- a/game.html
+++ b/game.html
@@ -25,16 +25,16 @@
 		<button id='start'>Start</button> 
 		<button id='pause'>Pause</button> 
 	</center>
-	<script src="js\default.js"></script>
-	<script src="js\draw.js"></script>
-	<script src="js\events.js"></script>
-	<script src="js\game_scenes.js"></script>
-	<script src="js\levels.js"></script>
-	<script src="js\bricks.js"></script>
-	<script src="js\paddle.js"></script>
-	<script src="js\ball.js"></script>
-	<script src="js\collision.js"></script>
-	<script src="js\main.js"></script>
+	<script src="js/default.js"></script>
+	<script src="js/draw.js"></script>
+	<script src="js/events.js"></script>
+	<script src="js/game_scenes.js"></script>
+	<script src="js/levels.js"></script>
+	<script src="js/bricks.js"></script>
+	<script src="js/paddle.js"></script>
+	<script src="js/ball.js"></script>
+	<script src="js/collision.js"></script>
+	<script src="js/main.js"></script>
 	<script type="text/javascript"> startGame(); </script> 
   </body>
   
