Minor changes... Level Data organisation changed.

--- a/game.html
+++ b/game.html
@@ -30,9 +30,7 @@
 	<script src="js/events.js"></script>
 	<script src="js/game_scenes.js"></script>
 	<script src="js/levels.js"></script>
-	<script src="js/bricks.js"></script>
-	<script src="js/paddle.js"></script>
-	<script src="js/ball.js"></script>
+	<script src="js/gameobjs.js"></script>
 	<script src="js/collision.js"></script>
 	<script src="js/main.js"></script>
 	<script type="text/javascript"> startGame(); </script> 
