With a rudimentary resource manager

--- a/game.html
+++ b/game.html
@@ -25,6 +25,7 @@
 		<button id='start'>Start</button> 
 		<button id='pause'>Pause</button> 
 	</center>
+	<script src="js/resources.js"></script></script>
 	<script src="js/default.js"></script>
 	<script src="js/draw.js"></script>
 	<script src="js/events.js"></script>
@@ -33,7 +34,7 @@
 	<script src="js/gameobjs.js"></script>
 	<script src="js/collision.js"></script>
 	<script src="js/main.js"></script>
-	<script type="text/javascript"> startGame(); </script> 
+	<script type="text/javascript"> loadResources(true); </script> 
   </body>
   
 </html>
