Code cleanup and general improvements

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
   <body>
     <canvas id='dxball' width = 640 height = 480 tabindex = '1'></canvas>
 	<script src="js/resources.js"></script></script>
-	<script src="js/default.js"></script>
+	<script src="js/main.js"></script>
 	<script src="js/draw.js"></script>
 	<script src="js/events.js"></script>
 	<script src="js/levels.js"></script>
