Minor Code Changes.

--- a/game.html
+++ b/game.html
@@ -28,7 +28,9 @@
 	<script src="js/levels.js"></script>
 	<script src="js/gameobjs.js"></script>
 	<script src="js/collision.js"></script>
-	<script type="text/javascript"> loadResources(true);</script> 
+	<script type="text/javascript"> 
+		DxBallResources.prepareAndStart();
+	</script> 
   </body>
   
 </html>
