--- a/game.html
+++ b/game.html
@@ -21,7 +21,8 @@
   
   <body>
     <canvas id='dxball' width = 640 height = 480 tabindex = '1'></canvas>
-	<script src="js/resources.js"></script></script>
+    <script src="js/dxengine.js"></script>
+	<script src="js/resources.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/draw.js"></script>
 	<script src="js/events.js"></script>
